kubernetes-labs/lab-25-istio-circuit-breaker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-25-circuitbreaker
  labels:
    istio-injection: enabled
